@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,7 @@
 package compiler.lib.ir_framework.driver;
 
 import compiler.lib.ir_framework.TestFramework;
+import compiler.lib.ir_framework.driver.network.TestVMData;
 import compiler.lib.ir_framework.shared.TestFrameworkException;
 import compiler.lib.ir_framework.shared.TestFrameworkSocket;
 import compiler.lib.ir_framework.shared.NoTestsRunException;
@@ -35,58 +36,185 @@ import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
 
 import java.io.File;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 /**
- * This class prepares, creates, and runs the "test" VM with verification of proper termination. The class also stores
- * information about the test VM which is later queried for IR matching. The communication between this driver VM
- * and the test VM is done over a dedicated socket.
+ * This class prepares, creates, and runs the Test VM with verification of proper termination. The class also stores
+ * information about the Test VM which is later queried for IR matching. The communication between this Driver VM
+ * and the Test VM is done over a dedicated socket.
  *
  * @see TestVM
  * @see TestFrameworkSocket
  */
 public class TestVMProcess {
-    private static final boolean VERBOSE = Boolean.getBoolean("Verbose");
     private static final boolean PREFER_COMMAND_LINE_FLAGS = Boolean.getBoolean("PreferCommandLineFlags");
     private static final int WARMUP_ITERATIONS = Integer.getInteger("Warmup", -1);
     private static final boolean VERIFY_VM = Boolean.getBoolean("VerifyVM") && Platform.isDebugBuild();
-    private static final boolean REPORT_STDOUT = Boolean.getBoolean("ReportStdout");
+    private static final boolean VERBOSE = Boolean.getBoolean("Verbose");
     private static final boolean EXCLUDE_RANDOM = Boolean.getBoolean("ExcludeRandom");
+    private static final boolean REPORT_STDOUT = Boolean.getBoolean("ReportStdout");
+    private static final boolean DUMP_OUTPUT = VERBOSE || EXCLUDE_RANDOM || REPORT_STDOUT;
+
+    private static final String FATAL_ERROR_MARKER = "# A fatal error has been detected by the Java Runtime Environment:";
 
     private static String lastTestVMOutput = "";
 
     private final ArrayList<String> cmds;
-    private String hotspotPidFileName;
     private String commandLine;
     private OutputAnalyzer oa;
-    private String irEncoding;
+    private final TestVMData testVmData;
 
     public TestVMProcess(List<String> additionalFlags, Class<?> testClass, Set<Class<?>> helperClasses, int defaultWarmup,
                          boolean allowNotCompilable, boolean testClassesOnBootClassPath) {
         this.cmds = new ArrayList<>();
         TestFrameworkSocket socket = new TestFrameworkSocket();
         try (socket) {
+            socket.start();
             prepareTestVMFlags(additionalFlags, socket, testClass, helperClasses, defaultWarmup,
                                allowNotCompilable, testClassesOnBootClassPath);
             start();
+            // Test VM has exited. Do not close the socket, yet, because the accept and/or reader threads could still
+            // be processing its connection. We wait for the socket result and only then close the socket by leaving
+            // this scope.
+            testVmData = processTestVmResult(socket, allowNotCompilable);
+        } // Socket closed here.
+    }
+
+    private TestVMData processTestVmResult(TestFrameworkSocket socket, boolean allowNotCompilable) {
+        if (oa.getExitValue() == 0) {
+            dumpTestVmOutputIfRequested();
+            return readAndDumpTestVmData(socket, allowNotCompilable);
         }
-        processSocketOutput(socket);
-        checkTestVMExitCode();
+
+        if (isTestFormatViolation()) {
+            // When a test is malformed, we only show the violation. This kind of failure should be caught during the
+            // development phase of new tests.
+            dumpTestVmOutputIfRequested();
+            throw createTestFormatException();
+        }
+        if (noTestsRun()) {
+            // If no test was selected, we just show the exception message. This kind of failure only happens during
+            // debugging when specifying an empty test set with property flags.
+            dumpTestVmOutputIfRequested();
+            throw createNoTestsRunException();
+        }
+        throw createTestVMExceptionForNonZeroExit(socket, allowNotCompilable);
+    }
+
+    /**
+     * Dump the Test VM output if flags request it.
+     */
+    private void dumpTestVmOutputIfRequested() {
+        if (DUMP_OUTPUT) {
+            dumpTestVmOutput();
+        }
+    }
+
+    private void dumpTestVmOutput() {
+        System.out.println("Test VM Output");
+        System.out.println("--------------");
+        System.out.println(oa.getOutput());
+    }
+
+    private TestVMData readAndDumpTestVmData(TestFrameworkSocket socket, boolean allowNotCompilable) {
+        String hotspotPidFileName = String.format("hotspot_pid%d.log", oa.pid());
+        TestVMData testVMData = socket.testVmData(hotspotPidFileName, allowNotCompilable);
+        testVMData.printJavaMessages();
+        return testVMData;
+    }
+
+    private boolean isTestFormatViolation() {
+        return oa.getStderr().contains("TestFormat.throwIfAnyFailures");
+    }
+
+    private TestFormatException createTestFormatException() {
+        Pattern pattern = Pattern.compile("Violations \\(\\d+\\)[\\s\\S]*(?=/============/)");
+        Matcher matcher = pattern.matcher(oa.getStderr());
+        TestFramework.check(matcher.find(), "Must find violation matches");
+        return new TestFormatException(System.lineSeparator() + System.lineSeparator() + matcher.group());
+    }
+
+    private boolean noTestsRun() {
+        return oa.getStderr().contains("NoTestsRunException");
+    }
+
+    private NoTestsRunException createNoTestsRunException() {
+        return new NoTestsRunException(">>> No tests run due to empty set specified with -DTest and/or -DExclude. " +
+                                       "Make sure to define a set of at least one @Test method");
+    }
+
+    private TestVMException createTestVMExceptionForNonZeroExit(TestFrameworkSocket socket, boolean allowNotCompilable) {
+        String secondaryException = "";
+        try {
+            readAndDumpTestVmData(socket, allowNotCompilable);
+        } catch (RuntimeException e) {
+            // We observed a message processing exception. We treat it as secondary failure because messages could be
+            // incomplete when the VM crashed or not even sent by the Test VM when it exits early on start-up
+            // (e.g. passing in an unknown VM flag).
+            secondaryException = buildSecondaryExceptionInfo(e);
+        }
+        // Primary exception: non-zero Test VM exit.
+        String exceptionInfo = buildPrimaryExceptionInfo() + secondaryException;
+        return new TestVMException(exceptionInfo);
+    }
+
+    private String buildSecondaryExceptionInfo(RuntimeException e) {
+        String secondaryException;
+        StringWriter stringWriter = new StringWriter();
+        e.printStackTrace(new PrintWriter(stringWriter));
+
+        secondaryException = System.lineSeparator() +
+                             "Secondary Message-Processing Exception" + System.lineSeparator() +
+                             "--------------------------------------" + System.lineSeparator() +
+                             stringWriter;
+        return secondaryException;
+    }
+
+    /**
+     * Get more detailed information about the exception in a pretty format.
+     */
+    private String buildPrimaryExceptionInfo() {
+        StringBuilder builder = new StringBuilder();
+        builder.append("Test VM exited with code ").append(oa.getExitValue()).append(System.lineSeparator());
+        if (hasFatalErrorMarker() || DUMP_OUTPUT) {
+            // Also dump the Test VM output if we experience a JVM error to show assertion failures etc.
+            builder.append(System.lineSeparator())
+                   .append(System.lineSeparator())
+                   .append("Test VM - Standard Output").append(System.lineSeparator())
+                   .append("-------------------------").append(System.lineSeparator())
+                   .append(oa.getStdout());
+        }
+        builder.append(System.lineSeparator())
+               .append(commandLine)
+               .append(System.lineSeparator())
+               .append(System.lineSeparator())
+               .append("Test VM - Error Output").append(System.lineSeparator())
+               .append("----------------------").append(System.lineSeparator())
+               .append(oa.getStderr())
+               .append(System.lineSeparator())
+               .append(System.lineSeparator());
+        return builder.toString();
+    }
+
+    /**
+     * Best-effort VM crash detection by matching the start of the fatal error message. This covers most of the crashes
+     * but fails when the Test VM was killed externally or when the output is unavailable or truncated which could
+     * happen in native stack overflow cases.
+     */
+    private boolean hasFatalErrorMarker() {
+        return oa.getExitValue() != 0 && oa.getOutput().contains(FATAL_ERROR_MARKER);
     }
 
     public String getCommandLine() {
         return commandLine;
     }
 
-    public String getIrEncoding() {
-        return irEncoding;
-    }
-
-    public String getHotspotPidFileName() {
-        return hotspotPidFileName;
+    public TestVMData testVmData() {
+        return testVmData;
     }
 
     public static String getLastTestVMOutput() {
@@ -98,7 +226,7 @@ public class TestVMProcess {
                                     boolean testClassesOnBootClassPath) {
         // Set java.library.path so JNI tests which rely on jtreg nativepath setting work
         cmds.add("-Djava.library.path=" + Utils.TEST_NATIVE_PATH);
-        // Need White Box access in test VM.
+        // Need White Box access in Test VM.
         String bootClassPath = "-Xbootclasspath/a:.";
         if (testClassesOnBootClassPath) {
             // Add test classes themselves to boot classpath to make them privileged.
@@ -108,11 +236,12 @@ public class TestVMProcess {
         cmds.add("-XX:+UnlockDiagnosticVMOptions");
         cmds.add("-XX:+WhiteBoxAPI");
         // Ignore CompileCommand flags which have an impact on the profiling information.
-        List<String> jtregVMFlags = Arrays.stream(Utils.getTestJavaOpts()).filter(s -> !s.contains("CompileThreshold")).collect(Collectors.toList());
+        List<String> jtregVMFlags = Arrays.stream(Utils.getTestJavaOpts()).filter(s -> !s.contains("CompileThreshold")).toList();
         if (!PREFER_COMMAND_LINE_FLAGS) {
             cmds.addAll(jtregVMFlags);
         }
-        // Add server property flag that enables test VM to print encoding for IR verification last and debug messages.
+        // Add server property flag that enables the Test VM to print the Applicable IR Rules for IR verification and
+        // debug messages.
         cmds.add(socket.getPortPropertyFlag());
         cmds.addAll(additionalFlags);
         cmds.addAll(Arrays.asList(getDefaultFlags()));
@@ -142,7 +271,7 @@ public class TestVMProcess {
     }
 
     /**
-     * Default flags that are added used for the test VM.
+     * Default flags that are added used for the Test VM.
      */
     private static String[] getDefaultFlags() {
         return new String[] {"-XX:-BackgroundCompilation", "-XX:CompileCommand=quiet"};
@@ -169,106 +298,9 @@ public class TestVMProcess {
             throw new TestFrameworkException("Error while executing Test VM", e);
         }
 
-        process.command().add(1, "-DReproduce=true"); // Add after "/path/to/bin/java" in order to rerun the test VM directly
+        process.command().add(1, "-DReproduce=true"); // Add after "/path/to/bin/java" in order to rerun the Test VM directly
         commandLine = "Command Line:" + System.lineSeparator() + String.join(" ", process.command())
                       + System.lineSeparator();
-        hotspotPidFileName = String.format("hotspot_pid%d.log", oa.pid());
         lastTestVMOutput = oa.getOutput();
-    }
-
-    /**
-     * Process the socket output: All prefixed lines are dumped to the standard output while the remaining lines
-     * represent the IR encoding used for IR matching later.
-     */
-    private void processSocketOutput(TestFrameworkSocket socket) {
-        String output = socket.getOutput();
-        if (socket.hasStdOut()) {
-            StringBuilder testListBuilder = new StringBuilder();
-            StringBuilder messagesBuilder = new StringBuilder();
-            StringBuilder nonStdOutBuilder = new StringBuilder();
-            Scanner scanner = new Scanner(output);
-            while (scanner.hasNextLine()) {
-                String line = scanner.nextLine();
-                if (line.startsWith(TestFrameworkSocket.STDOUT_PREFIX)) {
-                    // Exclude [STDOUT] from message.
-                    line = line.substring(TestFrameworkSocket.STDOUT_PREFIX.length());
-                    if (line.startsWith(TestFrameworkSocket.TESTLIST_TAG)) {
-                        // Exclude [TESTLIST] from message for better formatting.
-                        line = "> " + line.substring(TestFrameworkSocket.TESTLIST_TAG.length() + 1);
-                        testListBuilder.append(line).append(System.lineSeparator());
-                    } else {
-                        messagesBuilder.append(line).append(System.lineSeparator());
-                    }
-                } else {
-                    nonStdOutBuilder.append(line).append(System.lineSeparator());
-                }
-            }
-            System.out.println();
-            if (!testListBuilder.isEmpty()) {
-                System.out.println("Run flag defined test list");
-                System.out.println("--------------------------");
-                System.out.println(testListBuilder);
-                System.out.println();
-            }
-            if (!messagesBuilder.isEmpty()) {
-                System.out.println("Messages from Test VM");
-                System.out.println("---------------------");
-                System.out.println(messagesBuilder);
-            }
-            irEncoding = nonStdOutBuilder.toString();
-        } else {
-            irEncoding = output;
-        }
-    }
-
-    private void checkTestVMExitCode() {
-        final int exitCode = oa.getExitValue();
-        if (EXCLUDE_RANDOM || REPORT_STDOUT || (VERBOSE && exitCode == 0)) {
-            System.out.println("--- OUTPUT TestFramework test VM ---");
-            System.out.println(oa.getOutput());
-        }
-
-        if (exitCode != 0) {
-            throwTestVMException();
-        }
-    }
-
-    /**
-     * Exit code was non-zero of test VM. Check the stderr to determine what kind of exception that should be thrown to
-     * react accordingly later.
-     */
-    private void throwTestVMException() {
-        String stdErr = oa.getStderr();
-        if (stdErr.contains("TestFormat.throwIfAnyFailures")) {
-            Pattern pattern = Pattern.compile("Violations \\(\\d+\\)[\\s\\S]*(?=/============/)");
-            Matcher matcher = pattern.matcher(stdErr);
-            TestFramework.check(matcher.find(), "Must find violation matches");
-            throw new TestFormatException(System.lineSeparator() + System.lineSeparator() + matcher.group());
-        } else if (stdErr.contains("NoTestsRunException")) {
-            throw new NoTestsRunException(">>> No tests run due to empty set specified with -DTest and/or -DExclude. " +
-                                          "Make sure to define a set of at least one @Test method");
-        } else {
-            throw new TestVMException(getExceptionInfo());
-        }
-    }
-
-    /**
-     * Get more detailed information about the exception in a pretty format.
-     */
-    private String getExceptionInfo() {
-        int exitCode = oa.getExitValue();
-        String stdErr = oa.getStderr();
-        String stdOut = "";
-        boolean osIsWindows = Platform.isWindows();
-        boolean JVMHadError = (!osIsWindows && exitCode == 134) || (osIsWindows && exitCode == -1);
-        if (JVMHadError) {
-            // Also dump the stdout if we experience a JVM error (e.g. to show hit assertions etc.).
-            stdOut = System.lineSeparator() + System.lineSeparator() + "Standard Output" + System.lineSeparator()
-                     + "---------------" + System.lineSeparator() + oa.getOutput();
-        }
-        return "TestFramework test VM exited with code " + exitCode + System.lineSeparator() + stdOut
-               + System.lineSeparator() + commandLine + System.lineSeparator() + System.lineSeparator()
-               + "Error Output" + System.lineSeparator() + "------------" + System.lineSeparator() + stdErr
-               + System.lineSeparator() + System.lineSeparator();
     }
 }
